# chat-bot-llm-implementation

./: README.md  pyproject.toml
chainlit_app/: app.py
chroma_db/: chroma.sqlite3
src/myrag_chatbot/chatbot/: chatbot_engine.py
src/myrag_chatbot/db/: chroma.sqlite3
src/myrag_chatbot/embedder/: embedder.py
src/myrag_chatbot/loaders/: loaders.py  pdf_loader.py  txt_loader.py
src/myrag_chatbot/retriever/: retriever.py
src/myrag_chatbot/splitter/: splitter.py
