[project]
name = "myrag-chatbot"
version = "0.1.0"
description = ""
authors = [
    {name = "Antonio Morabito",email = "antoniomorabitositorus@gmail.com"}
]
readme = "README.md"
dependencies = [
]

[tool.poetry]
packages = [{include = "myrag_chatbot", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
langchain = "*"
langchain-community = "*"
langchain-ollama = "*"
langchain-core = "^0.3"
langchain-openai = "*"
langchain-text-splitters = "*"
chainlit = "^1.2.0"
langchainhub = "^0.1.21"
langchain-chroma = "^0.1.4"
python-dotenv = "*"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
